tests/positive/b3_promotion.lator
x is 5
y is users where x > 1.5
z is 1 + 2.5
w is 3 + 1.5 * 2
