tests/negative/cmp_int_string.lator
x is 5
y is users where x == "hi"
